--- a/styles.css
+++ b/styles.css
@@ -330,25 +330,33 @@ body, .midterbillede-sektion {
 }
 
 
-/*FAQ sektion*/
+/* FAQ sektion */
+.faq-container{
+    text-align: center;
+    background-color: #FAF8F5;
+    box-sizing: border-box;
+    padding: 20px 10%;
+    width: 95%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
 
+/* Overskrift */
 .faq-heading{
     padding: 20px 60px;
     text-align: center;
 }
 
-.faq-container{
-display: flex;
-justify-content: center;
-flex-direction: column;
-}
-
 /* Spørgsmål */
 .faq-page {
-    color: #00985F;
     cursor: pointer;
+    /* Pil når musen holdes på elementerne */
     padding: 30px 20px;
-    width: 60%;
+    width: 70%;
     transition: 0.4s;
     margin: auto;
     background-color: white;
@@ -359,7 +367,7 @@ flex-direction: column;
 /* Svar */
 .faq-body {
    margin: auto;
-   width: 60%; 
+   width: 70%; 
    font-size: 15px;  
    margin-bottom: 5px; 
    padding: 0 18px;
