--- a/styles.css
+++ b/styles.css
@@ -231,6 +231,85 @@ body, .midterbillede-sektion {
     margin-bottom: 20px;
 }
 
+
+
+#kort{
+    width: 100%;
+    height: 0;
+    padding-bottom: 65%;
+    display: block;
+    position: relative;
+    background-image: url("assets/images/DKkort.png");
+    background-position:center;
+    background-size:cover; 
+    background-repeat: no-repeat;
+ }
+ 
+ /* ===== nåle på kortet ===== */
+ #kort li {
+    display: block;
+    position: absolute;
+    width: 1.2rem;
+    height: 1.2rem;
+    background-color: rgb(255, 255, 255);
+    border-radius: 1rem;
+    font-size: 1rem;
+    text-align: center;
+    cursor: pointer;
+    transform: translateX(-1rem) translateY(-2.2rem); 
+    transition: transform 0.25s ease-out,
+    background-color 0.25s ease-out;
+    color: rgb(211, 211, 211);
+    border-style: solid;
+    border-width: 4px;
+    z-index: 1;
+ }
+ #kort li:after{ /* nåle spids */
+    content:'';
+    display: block;
+    width: 0; height: 0;
+    margin-top: 0.8rem;
+    margin-left: -0.04rem;
+    border-left: 0.4rem solid transparent;
+    border-right: 0.4rem solid transparent;
+    border-top: 0.65rem solid rgb(211, 211, 211);
+    transition: border-top 0.25s ease-out;  
+ }
+ #kort li:hover{
+   color: coral;
+   background-color: coral;
+   transform: translateX(-1rem)translateY(-2.5rem); 
+ }
+ #kort li:hover:after{
+    border-top:0.65rem solid coral;
+ }
+
+ h3{
+    font-size: 1rem;
+    color: #000000;
+ }
+
+ .adressetxt{
+    font-size: 0.6rem;
+    color: #000000;
+ }
+
+ .tidtxt{
+    font-size: 0.6rem;
+    color: #000000;
+ }
+
+.pinboks{
+    position:absolute;
+    width: 20vw;
+    background-color: #F5F1E8;
+    border-style: solid;
+    border-color: #333333;
+    border-radius: 0.3rem;
+    bottom: 1rem;
+}
+
+   
 .faq {
     text-align: center;
     background-color: #FAF8F5;
