--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ header {
     text-decoration: none;
     list-style-type: none;
     position: absolute;
-    top:2%;
+    top:4%;
     right: 5%;
 }
 
@@ -56,7 +56,7 @@ header {
     background-color: #B3724A; /* Tilføj denne linje */
     position: absolute; /* Tilføj denne linje */
     bottom: 0px; /* Tilføj denne linje */
-    left: 0; /* Tilføj denne linje */
+    left: 20px; /* Tilføj denne linje */
     right: 0; /* Tilføj denne linje */
 }
 
