--- a/styles.css
+++ b/styles.css
@@ -333,7 +333,7 @@ body, .midterbillede-sektion {
 
 
 
-/*FAQ sektion*/
+/*kort sektion*/
 #kort{
     width: 100%;
     height: 0;
@@ -503,7 +503,7 @@ body, .midterbillede-sektion {
     background-color: #FAF8F5;
     box-sizing: border-box;
     padding: 20px 10%;
-    width: 95%;
+    width: 85%;
     height: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -814,7 +814,7 @@ img {
         width:85%;
     }
     .faq {
-        width: 85%;
+        width: 95%;
     }
     .kontakt-section {
         width: 85%;
@@ -836,5 +836,9 @@ img {
     }
     .desktop-menu {
         display:none;
+    }
+    /* Her starter FAQ sektion */
+    .faq-container{
+        width: 95%;
     }
 }
